--- a/package.json
+++ b/package.json
@@ -17,10 +17,24 @@
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.6",
     "gatsby": "^4.10.3",
+    "gatsby-plugin-image": "^2.10.1",
     "gatsby-plugin-styled-components": "^5.10.0",
     "gatsby-source-shopify": "^6.10.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "styled-components": "^5.3.5"
+  },
+  "devDependencies": {
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.7",
+    "prettier": "^2.6.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": ["prettier --write", "git add"]
   }
 }
