--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "prepare": "husky install"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.6",
@@ -25,7 +26,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "husky": "^4.3.8",
+    "husky": "^7.0.4",
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.1"
   },
