--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "gatsby-plugin-image": "^2.10.1",
     "gatsby-plugin-styled-components": "^5.10.0",
     "gatsby-source-shopify": "^6.10.2",
+    "isomorphic-fetch": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "shopify-buy": "^2.14.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
